src/objects/Foundation_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Details__c</fullName>
        <label>Amount Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Fund Amount</inlineHelpText>
        <label>Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Budget_YTD_Remaining__c</fullName>
        <label>Annual Budget (YTD Remaining)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_Approval__c</fullName>
        <label>Justification for Approval</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justifications_for_Approval__c</fullName>
        <inlineHelpText>Justification for approval request</inlineHelpText>
        <label>Justification for Approval</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Summary__c</fullName>
        <inlineHelpText>Details on Organization for approvers</inlineHelpText>
        <label>Organization Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_URL__c</fullName>
        <label>Organization URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <inlineHelpText>Name of Organization funding</inlineHelpText>
        <label>Organization</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Focus_Area_Budget_YTD_Remain__c</fullName>
        <label>Strategic Focus Area Budget YTD Remain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Focus_Area_Budget__c</fullName>
        <label>Strategic Focus Area Budget</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Focus_Area_Details__c</fullName>
        <label>Strategic Focus Area Details</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Budget__c</fullName>
        <label>Total Annual Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Foundation Approval</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Foundation Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foundation Approvals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>